fixed 10px whitespace when modal is open

--- a/app/assets/stylesheets/grayscale/grayscale.scss
+++ b/app/assets/stylesheets/grayscale/grayscale.scss
@@ -655,3 +655,11 @@ a .navbar-header .navbar-brand {
         padding-right: 0px;
         padding-left: 0px;
     }
+
+    .modal{
+    overflow-y: auto;
+    }
+    .modal-open{
+    overflow:auto;
+    overflow-x:hidden;
+    }
